<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        style="@style/text_20"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/create_account_title"
        android:textColor="@color/blue"
        />

        <TextView
            style="@style/text_20"
            android:layout_width="353dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_account_desc"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
        android:id="@+id/signup_name"
        style="@style/edit_16"
        android:drawableLeft="@drawable/email"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/signup_contact"
        style="@style/edit_16"
        android:drawableLeft="@drawable/email"
        android:inputType="phone"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:hint="@string/contact_no"


        />

    <EditText
        android:id="@+id/signup_email"
        style="@style/edit_16"
        android:drawableLeft="@drawable/email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/signup_password"
        style="@style/edit_16"
        android:drawableLeft="@drawable/lock"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/signup_confirm_password"
        style="@style/edit_16"
        android:drawableLeft="@drawable/lock"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/signup_signup"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"


        />

        <TextView
            android:id="@+id/signup_already_account"
            style="@style/text_14"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/Already_account"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>