<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_20"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/forgot_password_title"
            android:textColor="@color/blue"
            />

        <EditText
            android:id="@+id/forgot_email"
            style="@style/edit_16"
            android:drawableLeft="@drawable/email"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:hint="@string/email"
            />

        <EditText
            android:id="@+id/forgot_password"
            style="@style/edit_16"
            android:drawableLeft="@drawable/lock"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/forgot_confirm_password"
            style="@style/edit_16"
            android:drawableLeft="@drawable/lock"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/forgot_submit"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"


            />

    </LinearLayout>


</ScrollView>